--- a/_modules/iceprod/server/modules/db.html
+++ b/_modules/iceprod/server/modules/db.html
@@ -423,7 +423,7 @@
                         <span class="n">sep</span> <span class="o">=</span> <span class="s">&#39;, &#39;</span>
                     <span class="k">elif</span> <span class="k">False</span><span class="p">:</span><span class="c">#col.endswith(&#39;_id&#39;):</span>
                         <span class="n">sql_index_create</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s">&#39;CREATE INDEX IF NOT EXISTS &#39;</span><span class="o">+</span><span class="n">col</span><span class="o">+</span><span class="s">&#39;_index ON &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="o">+</span><span class="s">&#39; (&#39;</span><span class="o">+</span><span class="n">col</span><span class="o">+</span><span class="s">&#39;)&#39;</span><span class="p">)</span>
-                <span class="n">sql_create</span> <span class="o">+=</span> <span class="s">&#39;)&#39;</span>
+                <span class="n">sql_create</span> <span class="o">+=</span> <span class="s">&#39;) WITHOUT ROWID&#39;</span>
                 <span class="n">scols</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">cols</span><span class="p">)</span>
                 <span class="k">with</span> <span class="p">(</span><span class="n">conn</span> <span class="k">if</span> <span class="n">table_name</span> <span class="o">!=</span> <span class="s">&#39;setting&#39;</span> <span class="k">else</span> <span class="bp">self</span><span class="o">.</span><span class="n">_inc_id_connection</span><span class="p">)</span> <span class="k">as</span> <span class="n">c</span><span class="p">:</span>
                     <span class="n">cur</span> <span class="o">=</span> <span class="n">c</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span>
@@ -461,10 +461,16 @@
 
         <span class="k">def</span> <span class="nf">_dbsetup</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dbname</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s">&#39;_dbsetup()&#39;</span><span class="p">)</span>
-            <span class="n">kwargs</span> <span class="o">=</span> <span class="p">{}</span>
+            <span class="n">cachesize</span> <span class="o">=</span> <span class="o">-</span><span class="mi">50000</span>
+            <span class="n">kwargs</span> <span class="o">=</span> <span class="p">{</span>
+                <span class="s">&#39;statementcachesize&#39;</span><span class="p">:</span><span class="mi">1000</span><span class="p">,</span>
+            <span class="p">}</span>
+            <span class="k">if</span> <span class="p">(</span><span class="s">&#39;db&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span> <span class="ow">and</span> <span class="s">&#39;sqlite_statementcachesize&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">]</span> <span class="ow">and</span>
+                <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;sqlite_statementcachesize&#39;</span><span class="p">],</span><span class="nb">int</span><span class="p">)):</span>
+                <span class="n">kwargs</span><span class="p">[</span><span class="s">&#39;statementcachesize&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;sqlite_statementcachesize&#39;</span><span class="p">]</span>
             <span class="k">if</span> <span class="p">(</span><span class="s">&#39;db&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span> <span class="ow">and</span> <span class="s">&#39;sqlite_cachesize&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">]</span> <span class="ow">and</span>
                 <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;sqlite_cachesize&#39;</span><span class="p">],</span><span class="nb">int</span><span class="p">)):</span>
-                <span class="n">kwargs</span><span class="p">[</span><span class="s">&#39;statementcachesize&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;sqlite_cachesize&#39;</span><span class="p">]</span>
+                <span class="n">cachesize</span> <span class="o">=</span> <span class="o">-</span><span class="mi">1</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;sqlite_cachesize&#39;</span><span class="p">]</span>
             <span class="n">name</span> <span class="o">=</span> <span class="s">&#39;name&#39;</span>
             <span class="k">if</span> <span class="n">dbname</span><span class="p">:</span>
                 <span class="n">name</span> <span class="o">+=</span> <span class="s">&#39;_&#39;</span><span class="o">+</span><span class="n">dbname</span>
@@ -472,6 +478,7 @@
             <span class="n">conn</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&#39;PRAGMA journal_mode = WAL&#39;</span><span class="p">)</span>
             <span class="n">conn</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&#39;PRAGMA synchronous = OFF&#39;</span><span class="p">)</span>
             <span class="n">conn</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&#39;PRAGMA automatic_index = OFF&#39;</span><span class="p">)</span>
+            <span class="n">conn</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&#39;PRAGMA cache_size = %d&#39;</span><span class="o">%</span><span class="n">cachesize</span><span class="p">)</span>
             <span class="n">conn</span><span class="o">.</span><span class="n">setbusytimeout</span><span class="p">(</span><span class="mi">100</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">conn</span>
 
@@ -601,7 +608,7 @@
                         <span class="n">sep</span> <span class="o">=</span> <span class="s">&#39;, &#39;</span>
                     <span class="k">elif</span> <span class="k">False</span><span class="p">:</span><span class="c">#col.endswith(&#39;_id&#39;):</span>
                         <span class="n">sql_create</span> <span class="o">+=</span> <span class="s">&#39; INDEX&#39;</span> 
-                <span class="n">sql_create</span> <span class="o">+=</span> <span class="s">&#39;)&#39;</span>
+                <span class="n">sql_create</span> <span class="o">+=</span> <span class="s">&#39;) CHARACTER SET utf8 COLLATE utf8_general_ci&#39;</span>
                 <span class="n">scols</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">cols</span><span class="p">)</span>
                 <span class="k">try</span><span class="p">:</span>
                     <span class="n">cur</span> <span class="o">=</span> <span class="n">conn</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span>
@@ -615,7 +622,7 @@
                         <span class="k">if</span> <span class="ow">not</span> <span class="n">curcols</span> <span class="ow">or</span> <span class="nb">len</span><span class="p">(</span><span class="n">curcols</span><span class="p">)</span> <span class="o">&lt;</span> <span class="mi">1</span><span class="p">:</span>
                             <span class="c"># table does not exist</span>
                             <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;create table &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="p">)</span>
-                            <span class="n">cur</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&#39;create table &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="o">+</span><span class="n">sql_create</span><span class="o">+</span><span class="s">&#39; CHARACTER SET utf8 COLLATE utf8_general_ci&#39;</span><span class="p">)</span>
+                            <span class="n">cur</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&#39;create table &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="o">+</span><span class="n">sql_create</span><span class="p">)</span>
                         <span class="k">elif</span> <span class="n">curcols</span> <span class="o">!=</span> <span class="n">scols</span><span class="p">:</span>
                             <span class="c"># table not the same</span>
                             <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;modify table &#39;</span><span class="o">+</span><span class="n">table_name</span><span class="p">)</span>
