--- a/iceprod/server/data/www_templates/job_browse.html
+++ b/iceprod/server/data/www_templates/job_browse.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}IceProd{% end %}
+{% block title %}Jobs - IceProd{% end %}
 
-{% block page_title %}Tasks by Status{% end %}
+{% block page_title %}Jobs{% end %}
 
 {% block body %}
 
-<table class='job_table'>
+<table class='task_table'>
     <tr>
         <th>ID</th>
         <th>Status</th>
