--- a/iceprod/server/data/www_templates/job_detail.html
+++ b/iceprod/server/data/www_templates/job_detail.html
@@ -2,13 +2,13 @@
 
 {% autoescape None %}
 
-{% block title %}IceProd{% end %}
+{% block title %}{{ escape(job[k]) }} - IceProd{% end %}
 
-{% block page_title %}Task Details{% end %}
+{% block page_title %}Job Details{% end %}
 
 {% block body %}
 
-<div class="job_details">
+<div class="task_details">
 {% for k in job %}
 <div class="key_value">
   <div>{{ escape(k) }}</div>
@@ -24,6 +24,7 @@
 {% end %}
 
 {% if (current_user) %}
+<h3>Actions</h3>
 <div style="padding:10px;">
     <a href='javascript:call("reset_job");'>Reset</a>
     <a href='javascript:call("hard_reset_job");'>Hard Reset</a>
