fix 'variable referenced before assignment'

--- a/iceprod/server/data/www_templates/job_detail.html
+++ b/iceprod/server/data/www_templates/job_detail.html
@@ -2,7 +2,7 @@
 
 {% autoescape None %}
 
-{% block title %}{{ escape(job[k]) }} - IceProd{% end %}
+{% block title %}{{ escape(job['job_id']) }} - IceProd{% end %}
 
 {% block page_title %}Job Details{% end %}
 
