--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -30,7 +30,7 @@
 </table>
 
 {% if (current_user) %}
-<div class="actions">
+<div class="action">
     <button onclick='call("reset_dataset");'>Reset</button>
     <button onclick='call("hard_reset_dataset");'>Hard Reset</button>
     <button onclick='call("suspend_dataset");'>Suspend</button>
