--- a/iceprod/server/data/www_templates/job_detail.html
+++ b/iceprod/server/data/www_templates/job_detail.html
@@ -24,11 +24,10 @@
 {% end %}
 
 {% if (current_user) %}
-<h3>Actions</h3>
-<div style="padding:10px;">
-    <a href='javascript:call("reset_job");'>Reset</a>
-    <a href='javascript:call("hard_reset_job");'>Hard Reset</a>
-    <a href='javascript:call("suspend_job");'>Suspend</a>
+<div class="action">
+    <button onclick='call("reset_job");'>Reset</button>
+    <button onclick='call("hard_reset_job");'>Hard Reset</button>
+    <button onclick='call("suspend_job");'>Suspend</button>
 </div>
 {% end %}
 
