--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -155,6 +155,7 @@
 <script type="text/javascript" src="/static/jsviews.min.js"></script>
 <script type="text/javascript" src="/static/submit.js"></script>
 <script type="text/javascript" src="/static/documentation.js"></script>
+<script type="text/javascript" src="/static/jsonlint.js"></script>
 <script type="text/javascript">
 jQuery(document).ready(function() {
     // initalize the submission form
