--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -25,7 +25,7 @@
         </li>
         <li>
             <h4>$(jobs_submitted)</h4>
-            <p class="macro_desc">The number og jobs in the dataset.</p>
+            <p class="macro_desc">The number of jobs in the dataset.</p>
         </li>
         <li>
             <h4>$(job)</h4>
